--- a/apache.conf
+++ b/apache.conf
@@ -9,4 +9,35 @@ Alias /stikked /usr/share/stikked
 	<IfModule mod_authz_core.c>
 		Require all granted
 	</IfModule>
+
+	FileETag MTime Size
+
+	<IfModule !mod_rewrite>
+		Options +FollowSymLinks
+		RewriteEngine on
+		RewriteBase /stikked
+		RewriteCond $1 !^(index\.php|static|favicon\.ico|robots\.txt)
+		RewriteRule ^(.*)$ index.php?/$1 [QSA,L]
+	</IfModule>
+
+	<IfModule !mod_rewrite>
+		ErrorDocument 404 /index.php
+	</IfModule>
+
+	<IfModule mod_deflate>
+		SetOutputFilter DEFLATE
+	</IfModule>
+
+	<IfModule mod_expires>
+		ExpiresActive On
+		ExpiresByType text/javascript "access plus 1 year"
+		ExpiresByType application/x-javascript "access plus 1 year"
+		ExpiresByType application/javascript "access plus 1 year"
+		ExpiresByType text/css "access plus 1 year"
+		ExpiresByType image/jpeg "access plus 1 year"
+		ExpiresByType image/jpg "access plus 1 year"
+		ExpiresByType image/gif "access plus 1 year"
+		ExpiresByType image/png "access plus 1 year"
+		ExpiresByType image/x-icon "access plus 1 year"
+	</IfModule>
 </Directory>
