add rewrite rules based on webserver_sampleconfigs/

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,3 +1,12 @@
+var.stikked_url = "/stikked"
+
 alias.url += (
-	"/stikked" => "/usr/share/stikked",
+	var.stikked_url => "/usr/share/stikked",
+)
+
+url.rewrite-once += (
+	"^" + var.stikked_url + "/static/(.*)$" => "/static/$1",
+	"^" + var.stikked_url + "/favicon\.ico$" => "/favicon.ico",
+	"^" + var.stikked_url + "/robots\.txt$" => "/robots.txt",
+	"^" + var.stikked_url + "/(.*)$" => "/index.php$2",
 )
