--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -5,8 +5,8 @@ alias.url += (
 )
 
 url.rewrite-once += (
-	"^" + var.stikked_url + "/static/(.*)$" => "/static/$1",
-	"^" + var.stikked_url + "/favicon\.ico$" => "/favicon.ico",
-	"^" + var.stikked_url + "/robots\.txt$" => "/robots.txt",
+	"^" + var.stikked_url + "/static/(.*)$" => "$0",
+	"^" + var.stikked_url + "/favicon\.ico$" => "$0",
+	"^" + var.stikked_url + "/robots\.txt$" => "$0",
 	"^" + var.stikked_url + "/(.*)$" => "/index.php$2",
 )
