--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -8,5 +8,5 @@ url.rewrite-once += (
 	"^" + var.stikked_url + "/static/(.*)$" => "$0",
 	"^" + var.stikked_url + "/favicon\.ico$" => "$0",
 	"^" + var.stikked_url + "/robots\.txt$" => "$0",
-	"^" + var.stikked_url + "/(.*)$" => "/index.php$2",
+	"^" + var.stikked_url + "/(.*)$" => var.stikked_url + "/index.php$2",
 )
