--- a/apache.conf
+++ b/apache.conf
@@ -41,3 +41,15 @@ Alias /stikked /usr/share/stikked
 		ExpiresByType image/x-icon "access plus 1 year"
 	</IfModule>
 </Directory>
+
+<Directory /usr/share/stikked/application/config>
+    # Apache 2.x
+    <IfModule !mod_authz_core.c>
+        Order deny,allow
+        Deny from all
+    </IfModule>
+    # Apache 2.4
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
+</Directory>
