disable access to config from lighttpd config

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -10,3 +10,7 @@ url.rewrite-once += (
 	"^" + var.stikked_url + "/robots\.txt$" => "$0",
 	"^" + var.stikked_url + "/(.*)$" => var.stikked_url + "/index.php$2",
 )
+
+$HTTP["url"] =~ "^" + var.stikked_url + "/config/" {
+    url.access-deny = ("")
+}
