more complete list of dirs to hide from web

--- a/apache.conf
+++ b/apache.conf
@@ -42,7 +42,7 @@ Alias /stikked /usr/share/stikked
 	</IfModule>
 </Directory>
 
-<Directory /usr/share/stikked/application/config>
+<Directory ~ "/usr/share/stikked/application/(config|cache|controllers|core|errors|helpers|hooks|libraries|logs|models|third_party)">
     # Apache 2.x
     <IfModule !mod_authz_core.c>
         Order deny,allow
