--- a/apache.conf
+++ b/apache.conf
@@ -12,7 +12,7 @@ Alias /stikked /usr/share/stikked
 
 	FileETag MTime Size
 
-	<IfModule !mod_rewrite>
+	<IfModule mod_rewrite>
 		Options +FollowSymLinks
 		RewriteEngine on
 		RewriteBase /stikked
