deny access system and whole application dir

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -11,6 +11,6 @@ url.rewrite-once += (
 	"^" + var.stikked_url + "/(.*)$" => var.stikked_url + "/index.php$2",
 )
 
-$HTTP["url"] =~ "^" + var.stikked_url + "/(config|cache|controllers|core|errors|helpers|hooks|libraries|logs|models|third_party)" {
+$HTTP["url"] =~ "^" + var.stikked_url + "/(system|application)" {
     url.access-deny = ("")
 }
