--- a/apache.conf
+++ b/apache.conf
@@ -12,7 +12,7 @@ Alias /stikked /usr/share/stikked
 
 	FileETag MTime Size
 
-	<IfModule mod_rewrite>
+	<IfModule mod_rewrite.c>
 		Options +FollowSymLinks
 		RewriteEngine on
 		RewriteBase /stikked
@@ -20,15 +20,15 @@ Alias /stikked /usr/share/stikked
 		RewriteRule ^(.*)$ index.php?/$1 [QSA,L]
 	</IfModule>
 
-	<IfModule !mod_rewrite>
+	<IfModule !mod_rewrite.c>
 		ErrorDocument 404 /index.php
 	</IfModule>
 
-	<IfModule mod_deflate>
+	<IfModule mod_deflate.c>
 		SetOutputFilter DEFLATE
 	</IfModule>
 
-	<IfModule mod_expires>
+	<IfModule mod_expires.c>
 		ExpiresActive On
 		ExpiresByType text/javascript "access plus 1 year"
 		ExpiresByType application/x-javascript "access plus 1 year"
